# learning_c

./: 1.sh  3.sh  CMakeCache.txt  CMakeLists.txt  Makefile  Tesla.txt  cmake_install.cmake  func.cpp  gpu_sum  main  main.cpp  main_cmake  try.py
include/: 1.hpp  animal.hpp  arr.hpp  box.hpp  iou.hpp  opencv_train.hpp  single.hpp  sort.hpp  timer.hpp  trd.hpp
src/: gpu  gpu.cu  inno.cpp  main.cpp  sampleOnnxMNIST2.cpp
